# xreal-ai-client

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  SPEC.md
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
docs/: agent-setup-guide.md  architecture.md  background.md  orchestrator-CLAUDE.md  projects.example.json  quest3-vr-adaptation.md  session-persistence-options.md  stage-a-experiments.md  upstream-docs-index.md  xreal-project.sh
docs/superpowers/plans/: 2026-06-07-voice-bottom-controls.md
harmony/: README.md  sync-web-assets.sh
harmony/app/: .gitignore  build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/app/AppScope/: app.json5
harmony/app/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
harmony/app/entry/src/main/cpp/types/libsshbridge/: index.d.ts  oh-package.json5
harmony/docs/: DECISIONS.md  HUMAN-TASKS.md  adaptation.md  ssh-options.md
ios/: .gitignore  BuildSettings.xcconfig  KNOWN-ISSUES.md  README.md  TESTING-NOTES.md  Version.xcconfig  project.yml
ios/App/: Info.plist  XrealPOC.entitlements
ios/RecordingWidget/: Info.plist  RecordingWidgetBundle.swift
ios/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
ios/Shared/: AudioInbox.swift
ios/SharedLive/: RecordingActivityAttributes.swift
scripts/: setup-mac-host.sh  term-relay.py
singbox-bridge/: README.md  bridge.go  build-ios.sh  go.mod  go.sum
xray-bridge/: bridge.go  build-ios.sh  build.sh  go.mod  go.sum
(+133 files in other folders)
